Fixing space to right on mobile

--- a/rca/static_src/sass/components/_jump-nav.scss
+++ b/rca/static_src/sass/components/_jump-nav.scss
@@ -22,11 +22,15 @@
 
     &__heading {
         @include font-size(xxs);
-        grid-column: 1 / span 1;
+        display: none;
         align-items: center;
         justify-content: flex-end;
-        display: inline-flex;
         margin-right: ($gutter * 2);
+        grid-column: 1 / span 1;
+
+        @include media-query(large) {
+            display: inline-flex;
+        }
     }
 
     &__heading-label {
